# keyword_extraction

./: .gitignore  Dockerfile  README.md  manifest.json  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt  watch_user_csv.sh
.githooks/: prepare-commit-msg
.github/ISSUE_TEMPLATE/: template.md
.github/workflows/: check.yaml
custom_dict/: dicrc  mecabrc  stop_words.txt  unk.csv  unk.dic  user.csv  user.dic  user_entry.csv
source/: app.py  connect.sh  csv_to_dic.py  main.py  notion_fetcher.py  notion_handler.py  sheets_writer.py  word_analyser.py
source/pages/: stop_words.py
source/utils/: auth.py
src/: app.py
src/core/: __init__.py  csv_to_dic.py  keyword_extraction.py  main.py  plot.py  word_analyser.py
src/logs/: logger.py
src/pages/: monthly_keywords.py  stop_words.py  user_dict.py
src/services/: __init__.py  history_maker.py  notion_handler.py  sheets_writer.py  supabase_auth.py  supabase_client.py
src/utils/: auth.py  supabase.py
tests/: test_csv_to_dic.py  test_plot.py  test_word_analyser.py
tests/custom_dict/: user.dic
